Fixes and improvements to video playing.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        </div>
 
        <h2 id="appTitle"> Media Player 
-         <a href="feranmi.name.ng" target="_blank" rel="noopener"> <!--ToDo: Make link open in a new browser window.-->
+         <a href="https://feranmi.name.ng" target="_blank" rel="noopener">
             - by Stac
          </a>
        </h2>
@@ -68,17 +68,11 @@
       </div>
 
       <div id="sidebar-bottom">
-        <div class="sidebar-icons" id="info-icon">        
-          <img src="./icons/Sidebar/info1.png">
-        </div>
         <div class="sidebar-icons" id="settings-icon">        
           <img src="./icons/Sidebar/settings1.png">
         </div>
-        <!--<div class="sidebar-icons" id="feedback-icon">        
-          <img src="./icons/Sidebar/feedback.png">
-        </div-->
-        <div class="sidebar-icons" id="account-icon">        
-          <img src="./icons/Sidebar/account2.png">
+        <div class="sidebar-icons" id="info-icon">        
+          <img src="./icons/Sidebar/info1.png">
         </div>
       </div>
     </div>
@@ -93,11 +87,6 @@
     
     <button id="close-video">Close</button>
     <div id="click-blocker"></div>
-
-    <div id="base-buttons">
-      <button id="devTools">Dev Tools</button>
-      <button id="reload">Reload</button>
-    </div>
 
     <!--div id="react-test" style="position: fixed; bottom: 2px; left: 50vw;"></div-->
     <!---->
